<resources>
    <string name="app_name">NasaMarsRover</string>
    <string name="toolbar_title">Nasa Mars Rover</string>
    <string name="curiosity">curiosity</string>
    <string name="spirit">spirit</string>
    <string name="opportunity">opportunity</string>
    <string name="filter">Filter</string>
    <string name="earth_date">Earth Date:&#160;</string>
    <string name="rover_name">Rover Name:&#160;</string>
    <string name="camera">Camera:&#160;</string>
    <string name="status">Status:&#160;</string>
    <string name="launch_date">Launch Date:&#160;</string>
    <string name="landing_date">Landing Date:&#160;</string>
    <string name="close">CLOSE</string>
    <string name="options">Options</string>
    <string name="filter_by_sol">Filter by Sol</string>
    <string name="filter_by_date">Filter by Date</string>
    <string name="enter_an_integer_sol_value">Enter an integer sol value</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="sol_description">Photos can be organized by the sol (Martian rotation or day) on which they were taken, counting up from the rover\'s landing date.</string>
    <string name="no_filter">No Filter</string>
    <string name="earth_date_description">Search photos by the Earth date</string>
    <string name="no_results">No results were found.</string>
    <string name="retry">Retry</string>
    <string name="refresh">Refresh</string>
    <string name="empty_string" />
    <string name="rover_info_dialog_failed_title">Rover camera information could not be retrieved from the internet.</string>
    <string name="rover_info_dialog_failed_message">You can try to retrieve the information by clicking the retry button.</string>
    <string name="get_rover_info_failed">Check your network connection</string>
</resources>