<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/fhazCamBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FHAZ"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"/>

    <Button
        android:id="@+id/navCamBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NAVCAM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/curiosityTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curiosity"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/spiritTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spirit"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/opportunityTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opportunity"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fhazCamBtn"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>